--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1018,7 +1018,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <p class="copy">© 2020 <a href="#">Carzone Corp.</a> All Rights Reserved.</p>
+                    <p class="copy">© 2022 | <a href="#">ßLIZZARD Auto Oy</a> | All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-4">
                     <div class="social-list-2">
