included top and nav to base

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,17 @@
 <body>
 <div class="page_loader"></div>
 
+
+{% include 'includes/topbar.html' %}
+
+{% include 'includes/navbar.html' %}
+
+
+
+
+
 {% block content %}
+
 
 {% endblock %}
 
