--- a/templates/base.html
+++ b/templates/base.html
@@ -50,12 +50,13 @@
 
 
 
-
-
 {% block content %}
 
 
 {% endblock %}
+
+
+{% include 'includes/footer.html' %}
 
 
 <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
