--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -5,9 +5,9 @@
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-7">
                 <div class="list-inline">
-                    <a href="tel:+55-4XX-634-7071"><i class="fa fa-phone"></i>+55-4XX-634-7071</a>
-                    <a href="tel:info@themevessel.com"><i class="fa fa-envelope"></i>info@themevessel.com</a>
-                    <a href="tel:info@themevessel.com"><i class="fa fa-clock-o"></i>Mon - Sun: 8:00am - 6:00pm</a>
+                    <a href="tel:+55-4XX-634-7071"><i class="fa fa-phone"></i>+358-40-XXX-XXXX</a>
+                    <a href="tel:info@themevessel.com"><i class="fa fa-envelope"></i>info@blizzard.fi</a>
+                    <a href="tel:info@themevessel.com"><i class="fa fa-clock-o"></i>Mon - Sun: 9:00am - 5:00pm</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-5">
