--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -45,6 +45,7 @@
                 <div class="form-group">
                     <select class="form-control search-fields" name="select-brand">
                         <option selected="true" disabled="disabled">Brand</option>
+                        <option>Volvo</option>
                         <option>Audi</option>
                         <option>BMW</option>
                         <option>Honda</option>
@@ -54,8 +55,11 @@
                 <div class="form-group">
                     <select class="form-control search-fields" name="select-make">
                         <option selected="true" disabled="disabled">Model</option>
-                        <option>BMW</option>
-                        <option>Honda</option>
+                        <option>Volvo XC60</option>
+                        <option>Volvo S90</option>
+                        <option>BMW 5 series</option>
+                        <option>BMW X1</option>
+                        <option>Honda Accord</option>
                         <option>Lamborghini Huracán</option>
                         <option>Sports Car</option>
                     </select>
@@ -63,8 +67,8 @@
                 <div class="form-group">
                     <select class="form-control search-fields" name="select-location">
                         <option selected="true" disabled="disabled">Location</option>
-                        <option>United States</option>
-                        <option>United Kingdom</option>
+                        <option>Finland</option>
+                        <option>Sweden</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -88,7 +92,7 @@
                 </div>
                 <div class="range-slider clearfix">
                                 <label>Price</label>
-                                <div data-min="0" data-max="150000"  data-min-name="min_price" data-max-name="max_price" data-unit="USD" class="range-slider-ui ui-slider" aria-disabled="false"></div>
+                                <div data-min="0" data-max="150000"  data-min-name="min_price" data-max-name="max_price" data-unit="EUR" class="range-slider-ui ui-slider" aria-disabled="false"></div>
                                 <div class="clearfix"></div>
                             </div>
                 <div class="form-group">
