--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -68,7 +68,7 @@
                             </div>
                             <div class="detail">
                                 <h5>Phone:</h5>
-                                <p><a href="#">+358 XX XXX XXXX</a></p>
+                                <p><a href="#">+358 XX XXX XX00</a></p>
                             </div>
                         </div>
                         <div class="ci-box">
@@ -95,7 +95,7 @@
                             </div>
                             <div class="detail">
                                 <h5>Fax:</h5>
-                                <p><a href="#">+358 XX XXX XXXX</a></p>
+                                <p><a href="#">+358 XX XXX XX00</a></p>
                             </div>
                         </div>
                     </div>
