--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -504,12 +504,12 @@
                             <div class="form-group">
                                 <select class="selectpicker search-fields" name="location">
                                     <option>Location</option>
-                                    <option>United States</option>
-                                    <option>United Kingdom</option>
-                                    <option>American Samoa</option>
-                                    <option>Belgium</option>
-                                    <option>Cameroon</option>
-                                    <option>Canada</option>
+                                    <option>Finland</option>
+                                    <option>Sweden</option>
+                                    <option>Norway</option>
+                                    <option>Denmark</option>
+                                    <option>Estonia</option>
+                                    <option>Latvia</option>
                                 </select>
                             </div>
                             <div class="form-group">
@@ -520,6 +520,8 @@
                                     <option>2018</option>
                                     <option>2019</option>
                                     <option>2020</option>
+                                    <option>2021</option>
+                                    <option>2022</option>
                                 </select>
                             </div>
                             <div class="form-group">
@@ -543,7 +545,7 @@
                             </div>
                             <div class="range-slider clearfix">
                                 <label>Price</label>
-                                <div data-min="0" data-max="150000"  data-min-name="min_price" data-max-name="max_price" data-unit="USD" class="range-slider-ui ui-slider" aria-disabled="false"></div>
+                                <div data-min="0" data-max="150000"  data-min-name="min_price" data-max-name="max_price" data-unit="EUR" class="range-slider-ui ui-slider" aria-disabled="false"></div>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="form-group mb-0">
