dynamic latest cars

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <p class="copy">© {% now 'Y' %} | <a href="#">ßLIZZARD Auto Oy</a> | All Rights Reserved.</p>
+                    <p class="copy">© {% now 'Y' %} | <a href="#">ßLIZZARD Auto Oy</a> | All Rights Reserved | <a href="https://portfolio-koushik.netlify.app/" target="_blank">Developed by koushik@devHuß</a></p>
                 </div>
                 <div class="col-lg-4">
                     <div class="social-list-2">
