more single car data added

--- a/blizzard/static/css/style.css
+++ b/blizzard/static/css/style.css
@@ -6068,7 +6068,7 @@ footer {
 
 /** Sub Banner start **/
 .sub-banner {
-    background: rgba(0, 0, 0, 0.04) url(../img/car-1.jpg) top left repeat;
+    background: rgba(0, 0, 0, 0.04) url(../img/f-1.jpg) top left repeat;
     background-size: cover;
     height: 360px;
     background-position: center center;
