changes on car location, social media

--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -293,11 +293,11 @@
                         </ul>
                         <div class="social-list clearfix">
                             <ul>
-                                <li><a href="https://www.facebook.com/" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://twitter.com/" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="https://www.google.com/" class="google-bg"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="https://www.aut.fi/en" class="rss-bg"><i class="fa fa-rss"></i></a></li>
-                                <li><a href="https://www.linkedin.com" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="{{team.facebook_link}}" target="_blank" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="{{team.twitter_link}}" target="_blank" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="{{team.google_plus_link}}" target="_blank" class="google-bg"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="{{team.rss_link}}" target="_blank" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+                                <li><a href="{{team.linkedin_link}}" target="_blank" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
