--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -559,11 +559,11 @@
                         <h5 class="sidebar-title">Follow us</h5>
                         <div class="social-list clearfix">
                             <ul>
-                                <li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#" class="google-bg"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
-                                <li><a href="#" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="{{team.facebook_link}}" target="_blank" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="{{team.twitter_link}}" target="_blank" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="{{team.google_plus_link}}" target="_blank" class="google-bg"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="{{team.rss_link}}" target="_blank" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+                                <li><a href="{{team.linkedin_link}}" target="_blank" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
