search icon functionality completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
 <div id="full-page-search">
     <button type="button" class="close">×</button>
     <form action="{% url 'search' %}" class="search-header">
-        <input type="search" value="" placeholder="type keyword(s) here. Eg: Volvo, Audi, Mercedes Benz, Porsche etc" name='keyword' />
+        <input type="search" value="" placeholder="type keyword(s) here. Eg: Volvo, Audi, Mercedes-Benz, Porsche, Audi, BMW etc" name='keyword' />
         <button type="submit" class="btn btn-sm button-theme">Search</button>
     </form>
 </div>
