activated model, location, year, car-type search option

--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -36,7 +36,7 @@
                             </h6>
                         </div>
                         <div class="pull-right">
-                            <h3><span>{{single_car.price | intcomma}}</span></h3>
+                            <h3><span>€{{single_car.price | intcomma}}</span></h3>
                         </div>
                     </div>
                     <div id="carDetailsSlider" class="carousel car-details-sliders slide mb-40">
