--- a/templates/cars/search.html
+++ b/templates/cars/search.html
@@ -53,8 +53,8 @@
                             <div class="form-group">
                                 <select class="selectpicker search-fields" name="select-location">
                                     <option disabled="disabled" selected="selected">Select Location</option>
-                                    <option>United States</option>
-                                    <option>United Kingdom</option>
+                                    <option>Finland</option>
+                                    <option>Sweden</option>
                                 </select>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="form-group">
                                 <div class="range-slider">
-                                    <div data-min="0" data-max="150000" data-unit="USD" data-min-name="min_price" data-max-name="max_price" class="range-slider-ui ui-slider" aria-disabled="false"></div>
+                                    <div data-min="0" data-max="250,000" data-unit="EUR" data-min-name="min_price" data-max-name="max_price" class="range-slider-ui ui-slider" aria-disabled="false"></div>
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
