--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -46,7 +46,7 @@
                     <input type="text" name="keyword" placeholder="Search by name" class="form-control">
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-make">
+                    <select class="form-control search-fields" name="model">
                         <option selected="true" disabled="disabled">Model</option>
                         {% for model in model_search %}
                            <option value="{{model}}">{{model}}</option>
@@ -54,7 +54,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-location">
+                    <select class="form-control search-fields" name="city">
                         <option selected="true" disabled="disabled">Location</option>
                         {% for city in city_search %}
                            <option value="{{city}}">{{city}}</option>
@@ -62,7 +62,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-year">
+                    <select class="form-control search-fields" name="year">
                         <option selected="true" disabled="disabled">Year</option>
                         {% for year in year_search %}
                            <option value="{{year}}">{{year}}</option>
@@ -70,7 +70,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-type">
+                    <select class="form-control search-fields" name="body_style">
                         <option selected="true" disabled="disabled">Select Type Of Car</option>
                         {% for body_style in body_style_search %}
                            <option value="{{body_style}}">{{body_style}}</option>
