admin panel color changed

--- a/blizzard/static/css/admin.css
+++ b/blizzard/static/css/admin.css
@@ -1,11 +1,17 @@
 #header{
-  background-color: #fff !important;
+  background-color: #ffffff !important;
   color: #ff0000 !important;
   box-shadow: 0px 0px 3px 0px #ff0000;
 }
 
-#header a:link, #header a:visited{
-  color: #000 !important;
+#header a:link, #header a:visited {
+  color: #09b9f3 !important;
+  font-weight: bold !important;
+}
+
+#logout-form button {
+  color: #ff0000 !important;
+  font-weight: bold !important;
 }
 
 div.breadcrumbs{
@@ -17,11 +23,11 @@ div.breadcrumbs{
 }
 
 .button, input[type=submit], input[type=button], .submit-row input, a.button{
-  background-color: #7B68EE;
+  background-color: #09b9f3;
 }
 
 .button:active, input[type=submit]:active, input[type=button]:active, .button:focus, input[type=submit]:focus, input[type=button]:focus, .button:hover, input[type=submit]:hover, input[type=button]:hover{
-  background-color: #7B68EE;
+  background-color: #16e859;
 }
 
 .button.default, input[type=submit].default, .submit-row input.default{
@@ -33,5 +39,6 @@ div.breadcrumbs{
 }
 
 a:link, a:visited{
-  color: #18b5e9;
+  color: #059cce;
+  font-weight: bold !important;
 }
