:white_check_mark: logout functionality successful!
d

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -22,7 +22,7 @@
 <div class="container mt-50 mb-50">
 	{% include 'includes/messages.html' %}
 	<div class="main-title" style="text-align:left !important;">
-            <h1>Welcome <span>User</span></h1>
+            <h1>Welcome <span>{{user.first_name}}!</span></h1>
             <p>Here are the cars that you have inquired about</p>
         </div>
 	<table class="table table-hover">
