--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -36,7 +36,7 @@
                         {% csrf_token %}
                         <div class="form-group form-box">
                             <input type="text" name="username" class="input-text" placeholder="Username" required>
-                            <i class="flaticon-mail"></i>
+                            <i class="flaticon-user"></i>
                         </div>
                         <div class="form-group form-box">
                             <input type="password" name="password" class="input-text" placeholder="Password" required>
