--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -25,6 +25,7 @@
             <h1>Welcome <span>{{user.first_name}}!</span></h1>
             <p>Here are the cars that you have inquired about</p>
         </div>
+		{% if inquiries %}
 	<table class="table table-hover">
 	  <thead>
 		<tr>
@@ -36,30 +37,22 @@
 		</tr>
 	  </thead>
 	  <tbody>
+
+	  {% for inquiry in inquiries %}
 		<tr>
 		  <th scope="row">1</th>
-		  <td>Lamborgini Huracan</td>
-		  <td>Austin</td>
-		  <td>$25000</td>
-		  <td><a href="#" class="btn btn-outline-dark">View Car</a></td>
+		  <td>{{inquiry.car_title}}</td>
+          <td>{{inquiry.city}}</td>
+		  <td><a href="{% url 'car_detail' inquiry.car_id %}" class="btn btn-outline-dark">View Car</a></td>
 		</tr>
-		<tr>
-		  <th scope="row">2</th>
-		  <td>Lamborgini Huracan</td>
-		  <td>Austin</td>
-		  <td>$25000</td>
-		  <td><a href="#" class="btn btn-outline-dark">View Car</a></td>
-		</tr>
-		<tr>
-		  <th scope="row">3</th>
-		  <td>Lamborgini Huracan</td>
-		  <td>Austin</td>
-		  <td>$25000</td>
-		  <td><a href="#" class="btn btn-outline-dark">View Car</a></td>
-		</tr>
+		{% endfor %}
 	  </tbody>
 	</table>
+  {% else %}
+    <h4>You have no inquiries</h4>
+  {% endif %}
 </div>
 
 <!--   Dashboard End   -->
+
 {% endblock %}
