--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,6 +3,8 @@
 {% block title %} | Login {% endblock %}
 {% block content %}
 {% load static %}
+{% load socialaccount %}
+{% providers_media_js %}
 
 
 <!-- Sub Banner start -->
@@ -50,7 +52,7 @@
                         </div>
                         <div class="clearfix"></div>
                         <ul class="social-list">
-                            <li><a href="#" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li>
+                            <li><a href="{% provider_login_url 'facebook' method='oauth2' %}" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li>
                             <li><a href="#" class="google-bg"><i class="fa fa-google google-i"></i><span>Google</span></a></li>
                         </ul>
                     </form>
