:art: logout button class modified
done

--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -17,8 +17,8 @@
                         <a href="{% url 'dashboard' %}" class="sign-in"><i class="fa fa-tachometer"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a href="javascript:{document.getElementById('logout').submit()}" class="sign-out"><i class="fa fa-sign-out"></i> Logout</a>
-                        <form action="{%url 'logout'%}" id="logout" method="POST">
+                        <a href="javascript:{document.getElementById('logout').submit()}" class="sign-in"><i class="fa fa-sign-out"></i> Logout</a>
+                        <form action="{% url 'logout'%}" id="logout" method="POST">
                             {% csrf_token %}
                             <input type="hidden">
                         </form>
