--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -53,6 +53,8 @@
                         <div class="clearfix"></div>
                         <ul class="social-list">
                             <li><a href="{% provider_login_url 'facebook' method='oauth2' %}" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li>
+                            <!-- We can use method='js_sdk' also. Difference is it will open in separate window -->
+                            <!-- <li><a href="{% provider_login_url 'facebook' method='js_sdk' %}" class="facebook-bg"><i class="fa fa-facebook facebook-i"></i><span>Facebook</span></a></li> -->
                             <li><a href="{% provider_login_url 'google' %}" class="google-bg"><i class="fa fa-google google-i"></i><span>Google</span></a></li>
                         </ul>
                     </form>
