--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -63,8 +63,8 @@
             <div class="col-xl-7 col-lg-6 align-self-center">
                 <div class="best-used-car">
                     <h3>Welcome to <span>BLIZZARD Auto</span></h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has</p>
-                    <p class="mb-0">electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker</p>
+                    <p>At <strong>Blizzard</strong>, our commitment to innovation and iconic customer experiences have made us the nation’s largest retailer of used cars. As the original disruptor of the automotive industry, our “no-haggle” prices transformed car buying and selling from a stressful, dreaded event into the honest, straightforward experience all people deserve. We’ve been raising the bar on customer experiences ever since.</p>
+                    <p class="mb-0">Today, our customers have the ability to buy completely on their terms, whether that’s online, in the store, or using a seamless combination of both. Couple our flexibility with our industry-leading Love Your Car Guarantee including 24-hour test drives and 30-day returns (up to 1500 mi.), and today we’re delivering iconic car buying experiences unlike any you’ve seen before.</p>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
         <!-- Main title -->
         <div class="main-title">
             <h1>Executive <span>Team</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+            <p>Our team will help you every step of the way during your Blizzard shopping experience.</p>
         </div>
         <!-- Slick slider area start -->
         <div class="slick-slider-area clearfix">
