--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -23,7 +23,7 @@
         <!-- Main title -->
         <div class="main-title text-center">
             <h1>Contact <span>Us</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+            <p>We'd love to hear what you have in mind! You can contact us in all matters related to buying or selling a car.</p>
         </div>
         <form action="{% url 'contact' %}" method="POST" enctype="multipart/form-data">
             {% include 'includes/messages.html' %}
