--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -15,27 +15,24 @@
                 <img class="d-block w-100 h-100" src="{% static 'img/blc-1.jpg' %}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
                    {% include 'includes/messages.html' %}
-                    <h3>Wow Factor Standard</h3>
-                    <h5>Allow us to guide you through the innovative stress<br>
-                        free approach in finding your dream car.</h5>
+                    <h3>Imagine the unimaginable</h3>
+                    <h5>Come and visit our high-tech performance car that is made only for you.</h5>
                     <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
                 </div>
             </div>
             <div class="carousel-item banner-max-height item-bg">
                 <img class="d-block w-100 h-100" src="{% static 'img/blc-2.jpg' %}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
-                    <h3>Explore Your Dream Car</h3>
-                    <h5>Allow us to guide you through the innovative stress<br>
-                        free approach in finding your dream car.</h5>
+                    <h3>Speed up the Future</h3>
+                    <h5>Let us to make yout journey comfortable today for a better tomorrow.</h5>
                     <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
                 </div>
             </div>
             <div class="carousel-item banner-max-height item-bg">
                 <img class="d-block w-100 h-100" src="{% static 'img/blc-3.jpg' %}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
-                    <h3>We Are Wheel</h3>
-                    <h5>Allow us to guide you through the innovative stress<br>
-                        free approach in finding your dream car.</h5>
+                    <h3>Fuel for Soul</h3>
+                    <h5>Your dreams on the wheel of our dealerships. Let us to treat your dream car with love and care.</h5>
                     <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
                 </div>
             </div>
@@ -205,7 +202,7 @@
         <!-- Main title -->
         <div class="main-title">
             <h1>Latest <span>Cars</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Our latest technological cars are superficially magnificent.</p>
         </div>
         <div class="row">
           {% for car in all_cars %}
@@ -300,7 +297,7 @@
         <!-- Main title -->
         <div class="main-title">
             <h1>Executive <span>Team</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+            <p>Our team will help you every step of the way during your Blizzard shopping experience.</p>
         </div>
         <!-- Slick slider area start -->
         <div class="slick-slider-area clearfix">
