--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -23,7 +23,7 @@
         <!-- Main title -->
         <div class="main-title text-center">
             <h1>Our <span>Services</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+            <p><strong>Blizzard</strong>'s brand maintenance ensures the continuation of your journey - now and in the future.</p>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
@@ -33,8 +33,8 @@
                         <i class="flaticon-support-2"></i>
                     </div>
                     <div class="detail">
-                        <h3>Free Support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <h3>Inspection</h3>
+                        <p>We first inspect your car and ensure that it is in an acceptable inspection condition. We handle the entire inspection.</p>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="detail">
                         <h3>Super Fast</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>Paying for car maintenance is now faster than before. After the service is completed, you will receive message.</p>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="detail">
                         <h3>Repairing</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p><strong>Blizzard</strong> will take care of your car with high quality and safety. We serve you together with all insurance companies.</p>
                     </div>
                 </div>
             </div>
@@ -69,8 +69,8 @@
                         <i class="flaticon-air-conditioner"></i>
                     </div>
                     <div class="detail">
-                        <h3>AIR conditioning</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <h3>Original accessories</h3>
+                        <p>You can also supplement your car with high-quality and perfectly fitting original accessories.</p>
                     </div>
                 </div>
             </div>
@@ -78,11 +78,11 @@
                 <div class="service-info">
                     <div class="number">5</div>
                     <div class="icon">
-                        <i class="flaticon-fuel"></i>
+                        <i class="flaticon-user"></i>
                     </div>
                     <div class="detail">
-                        <h3>Oil Change</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <h3>Financing</h3>
+                        <p>We offer a smooth <strong>Blizzard-Auto</strong> financing solution. Then you don't necessarily need a down payment.</p>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="detail">
                         <h3>Engine Repair</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>If you notice, an engine failure, immediately contact the store where you bought the car. You will be notified...</p>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="detail">
                         <h3>Dealership</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p><strong>Blizzard</strong> car dealerships serve all over Finland. Discover Finland's most comprehensive selection of trade-in cars.</p>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="detail">
                         <h3>Security</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p><strong>Blizzard</strong> Additional security brings peace of mind. It covers repairs in case of unexpected breakdowns - less than €2/day</p>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="detail">
                         <h3>Trusted Agents</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>We at <strong>Blizzard</strong> invest in uncompromising quality and superior professionalism in all our services.</p>
                     </div>
                 </div>
             </div>
