:white_check_mark: test successful
git push origin master

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -110,7 +110,7 @@
         <!-- Main title -->
         <div class="main-title">
             <h1>Featured <span>Cars</span></h1>
-            <p>Great deal!</p>
+            <p>We recommend you to check our featured cars.</p>
         </div>
         <!-- Slick slider area start -->
         <div class="slick-slider-area clearfix">
